--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
         <!-- PANEL 1 -->
         <div class="panel-1" id="panel-1">           
-         <h1>Panel-1</h1>
-            <button onclick="show();">Panel 2</button>
+         <h1>Color-1</h1>
+            <button onclick="show();">Color-2</button>
         </div>
    
         <!-- PANEL 2 -->
         <div class="panel-2" id="panel-2">
-            <h1>Panel 2</h1>
-            <button onclick="hide();">Panel 1</button>
+            <h1>Color-2</h1>
+            <button onclick="hide();">Color-1</button>
         </div>
  
     </body> 
